Allows to use this plugin with a local folder instead of sftp.